# WEB_HW14

./: .gitignore  alembic.ini  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 205ed20cd050_init.py  2887e123c8bc_init.py  a179b9f9de8b_init.py
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
migrations/versions/: 734725d4afb2_description_of_changes.py  8bec00b97302_init.py  939bbc404e76_description_of_changes.py  c84e38487eab_init.py  e826c69376ec_init.py
src/: schemas.py
src/conf/: config.py
src/database/: config.ini  db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
