[tool.poetry]
name = "hw13"
version = "0.1.0"
description = "WEB HW13"
authors = ["Olga Ivanko <o.ivanko@me.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
sqlalchemy = "^2.0.25"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"
pydantic-extra-types = "^2.5.0"
phonenumbers = "^8.13.29"
pydantic = {extras = ["email"], version = "^2.6.1"}
libgravatar = "^1.0.4"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
fastapi-mail = "^1.4.1"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.1"
fastapi-limiter = "^0.1.6"
pydantic-settings = "^2.2.0"
redis = "^5.0.1"
cloudinary = "^1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
